# mona-sync

./: .gitignore  Cargo.toml  database.db
migrations/: 20260512181648_init_all_tables.sql
src/: handlers.rs  main.rs
