[package]
name = "mona_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# The web framework
axum = "0.7"

# The async runtime needed to run Axum
tokio = { version = "1", features = ["full"] }

# The database toolkit (configured for SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# For serializing/deserializing JSON (equivalent to json_serializable in Dart)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
